# Kamateracloudihm

src/: Makefile  QUICKSTART.md  README.md  app-cli.py  app.py  kamatera-cli.sh  logger.py  pyproject.toml
src/kamatera/: Kamatera_cloud_management.py  auth_kamatera.py
src/models/: control_modele.py
src/route/: __init__.py  control_route.py  list_route.py
src/static/js/: alert.js  control.js  fetcher.js  render.js
src/template/: base.html  detail.html  index.html
