[project]
name = "kamateracloudihm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.121.1",
    "jinja2>=3.1.6",
    "orjson>=3.11.4",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.23.0",
]
